add event/pod/node/replicaset list/get
