# pkg/api/workload/handler/event.go
@@ -4,15 +4,15 @@ import (
 	"encoding/json"
 	"github.com/gin-gonic/gin"
 	dyn "github.com/yametech/fuxi/pkg/kubernetes/client"
-	v1 "k8s.io/api/batch/v1"
+	corev1 "k8s.io/api/core/v1"
 	"net/http"
 )
 
-// Get Job
-func (w *WorkloadsAPI) GetJob(g *gin.Context) {
+// Get Event
+func (w *WorkloadsAPI) GetEvent(g *gin.Context) {
 	namespace := g.Param("namespace")
 	name := g.Param("name")
-	item, err := w.job.Get(dyn.ResourceJob, namespace, name)
+	item, err := w.event.Get(dyn.ResourceEvent, namespace, name)
 	if err != nil {
 		g.JSON(http.StatusBadRequest,
 			gin.H{code: http.StatusBadRequest, data: "", msg: err.Error(), status: "Request bad parameter"})
@@ -21,16 +21,16 @@ func (w *WorkloadsAPI) GetJob(g *gin.Context) {
 	g.JSON(http.StatusOK, item)
 }
 
-// List Job
-func (w *WorkloadsAPI) ListJob(g *gin.Context) {
-	list, _ := w.job.List(dyn.ResourceJob, "", "", 0, 10000, nil)
-	jobList := &v1.JobList{}
+// List Event
+func (w *WorkloadsAPI) ListEvent(g *gin.Context) {
+	list, _ := w.event.List(dyn.ResourceEvent, "", "", 0, 10000, nil)
+	eventList := &corev1.EventList{}
 	marshalData, err := json.Marshal(list)
 	if err != nil {
 		g.JSON(http.StatusBadRequest,
 			gin.H{code: http.StatusBadRequest, data: "", msg: err.Error(), status: "Request bad parameter"})
 		return
 	}
-	_ = json.Unmarshal(marshalData, jobList)
-	g.JSON(http.StatusOK, jobList)
+	_ = json.Unmarshal(marshalData, eventList)
+	g.JSON(http.StatusOK, eventList)
 }
